tests/baselines/reference/typeGuardOfFormTypeOfNotEqualHasNoEffect(strict=true).errors.txt
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(1,19): error TS2564: Property 'p' has no initializer and is not definitely assigned in the constructor.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(9,12): error TS2454: Variable 'strOrNum' is used before being assigned.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(10,14): error TS2454: Variable 'strOrNum' is used before being assigned.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(13,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'r1' must be of type 'string | number', but here has type 'string'.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(16,12): error TS2454: Variable 'strOrBool' is used before being assigned.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(17,14): error TS2454: Variable 'strOrBool' is used before being assigned.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(20,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'r2' must be of type 'string | boolean', but here has type 'boolean'.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(23,12): error TS2454: Variable 'numOrBool' is used before being assigned.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(24,14): error TS2454: Variable 'numOrBool' is used before being assigned.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(27,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'r3' must be of type 'number | boolean', but here has type 'number'.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(30,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(30,12): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(31,14): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfNotEqualHasNoEffect.ts(34,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'r4' must be of type 'string | C', but here has type 'C'.


==== typeGuardOfFormTypeOfNotEqualHasNoEffect.ts (14 errors) ====
    class C { private p: string };
                      ~
!!! error TS2564: Property 'p' has no initializer and is not definitely assigned in the constructor.
    
    var strOrNum: string | number;
    var strOrBool: string | boolean;
    var numOrBool: number | boolean
    var strOrC: string | C;
    
    // typeof x != s has not effect on typeguard
    if (typeof strOrNum != "string") {
               ~~~~~~~~
!!! error TS2454: Variable 'strOrNum' is used before being assigned.
        var r1 = strOrNum; // string | number
                 ~~~~~~~~
!!! error TS2454: Variable 'strOrNum' is used before being assigned.
    }
    else {
        var r1 = strOrNum; // string | number
            ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'r1' must be of type 'string | number', but here has type 'string'.
!!! related TS6203 typeGuardOfFormTypeOfNotEqualHasNoEffect.ts:10:9: 'r1' was also declared here.
    }
    
    if (typeof strOrBool != "boolean") {
               ~~~~~~~~~
!!! error TS2454: Variable 'strOrBool' is used before being assigned.
        var r2 = strOrBool; // string | boolean
                 ~~~~~~~~~
!!! error TS2454: Variable 'strOrBool' is used before being assigned.
    }
    else {
        var r2 = strOrBool; // string | boolean
            ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'r2' must be of type 'string | boolean', but here has type 'boolean'.
!!! related TS6203 typeGuardOfFormTypeOfNotEqualHasNoEffect.ts:17:9: 'r2' was also declared here.
    }
    
    if (typeof numOrBool != "number") {
               ~~~~~~~~~
!!! error TS2454: Variable 'numOrBool' is used before being assigned.
        var r3 = numOrBool; // number | boolean
                 ~~~~~~~~~
!!! error TS2454: Variable 'numOrBool' is used before being assigned.
    }
    else {
        var r3 = numOrBool; // number | boolean
            ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'r3' must be of type 'number | boolean', but here has type 'number'.
!!! related TS6203 typeGuardOfFormTypeOfNotEqualHasNoEffect.ts:24:9: 'r3' was also declared here.
    }
    
    if (typeof strOrC != "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
        var r4 = strOrC; // string | C
                 ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
    }
    else {
        var r4 = strOrC; // string | C
            ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'r4' must be of type 'string | C', but here has type 'C'.
!!! related TS6203 typeGuardOfFormTypeOfNotEqualHasNoEffect.ts:31:9: 'r4' was also declared here.
    }